# taupy

./: .gitignore  .prettierrc  .templatesyncignore  LICENSE  README.md  index.html  metadata.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
.build/: create-symlink.js  sync-metadata.js
.github/workflows/: template-sync.yml
src-back/: install.spec
src-back/pyserver/: main.py
src-front/: App.css  App.tsx  ConnectButton.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/py_api/: child_manager.rs  csp_manager.rs  mod.rs  port_manager.rs
