[tool.poetry]
name = "taupy"
version = "0.1.0"
description = "Tauri App with Python backend"
authors = [ "whatphilipcodes <gerdes.philip@gmail.com>" ]
readme = "README.md"
package-mode = false

  [tool.poetry.dependencies]
  python = ">=3.12,<3.14"
  pyinstaller = "^6.11.1"

    [tool.poetry.dependencies.fastapi]
    extras = [ "standard" ]
    version = "^0.115.5"
