[package]
name = "taupy"
version = "0.1.0"
description = "Tauri App with Python backend"
authors = [ "whatphilipcodes <gerdes.philip@gmail.com>" ]
edition = "2021"

[lib]
name = "taupy_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies.tauri-build]
version = "2"
features = [ ]

[dependencies]
tauri-plugin-shell = "2"
serde_json = "1"
sysinfo = "0.33.0"

  [dependencies.tauri]
  version = "2"
  features = [ ]

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

[features]
ignore = [ ]
